# ampere-misc

./: README.md
ampere-cpld-fwupdate/: CMakeLists.txt  meson.build
ampere-cpld-fwupdate/include/: ast-jtag-intf.h  ast-jtag.h  cpld.h  lattice.h
ampere-cpld-fwupdate/src/: ast-jtag-intf.c  ast-jtag.c  cpld.c  lattice.c  main.c
driver-binder/: README.md  config.json  driver-binder.cpp  meson.build  xyz.openbmc_project.AmpDriverBinder.service
peripheral-manager/: config.json  main.cpp  meson.build  peripheral-manager.cpp  peripheral-manager.hpp  peripherals.cpp  xyz.openbmc_project.peripheral.manager.service.in
state-logger/: meson.build  xyz.openbmc_project.state_logger.service
state-update/: LICENSE  config.json  meson.build  state-update.cpp  xyz.openbmc_project.AmpHostState.service
